--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Candy - Bem-vindo(a)!</title>
     <style>
-
         body {
             font-family: Arial, sans-serif;
             background-color: #f7f7f7;
@@ -24,8 +23,6 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-
- 
         h1 {
             font-size: 24px;
             margin-bottom: 10px;
@@ -34,8 +31,6 @@
             font-size: 16px;
             line-height: 1.5;
         }
-
-
         .action-button {
             background-color: #6A0572;
             color: #fff;
@@ -46,7 +41,6 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-
         .action-button:hover {
             background-color: #e65c00;
         }
@@ -55,7 +49,11 @@
 <body>
     <div class="welcome-container">
         <h1>Bem-vindo(a) à Black Candy!</h1>
-        <p>Black Candy é uma plataforma de streaming de música com uma abordagem única. Semelhante ao Spotify, porém com uma tendência mais universitária, incentivamos a produção de música e apoiamos artistas independentes.</p>
+        <p>Black Candy é uma plataforma de streaming de música com uma abordagem única. Semelhante ao Spotify, porém com uma tendência mais universitária, incentivamos a produção de música.</p>
+        <div class="initiative">
+            <h2>Iniciativa Black Candy</h2>
+            <p>O Black Candy é uma iniciativa feita para o Departamento de Música da UFS. Esse projeto propõe incentivar a criação musical e armazenar as criações de alunos e professores.</p>
+        </div>
         <p>Na Black Candy, você pode descobrir novos talentos, explorar gêneros musicais diversos e criar suas próprias playlists personalizadas.</p>
         <button class="action-button">Comece a explorar</button>
     </div>
